syntax = "proto3";

package itmo.dev.asap.ban_machine;

option csharp_namespace = "Itmo.Dev.Asap.BanMachine.Models";

import "models/code_block.proto";

message SimilarCodeBlocks {
  repeated CodeBlock first = 1;
  repeated CodeBlock second = 2;
  double similarity_score = 3;
}